--- a/app/lang/lang_it.xml
+++ b/app/lang/lang_it.xml
@@ -36,6 +36,7 @@ Qui trovi la lista dei comandi supportati.
 /remove_no_payment : rimuove gli utenti il cui pagamento sta per scadere - **Solo Gruppo**
 
 I comandi che possono essere eseguiti solo nella chat di gruoppo sono specificati in grassetto.
+I parametri tra parentesi quadre sono opzionali.
 
 **NOTA:** è possibile aggiungere "quiet" o "q" come ultimo parametro per ottenere il risultato del comando in chat privata, per evitare di intasare il gruppo</sentence>
     <!-- Invite link command message (sent to authorized users) -->
