Add placeholders in translated sentences instead of string formats, so that they can be changed in order depending on the language

--- a/app/lang/lang_it.xml
+++ b/app/lang/lang_it.xml
@@ -11,7 +11,7 @@ Non sei autorizzato a utilizzare il comando.</sentence>
 Questo comando può essere eseguito solo nel gruppo.</sentence>
     <!-- Help command message -->
     <sentence id="HELP_CMD">**MENU DI AIUTO**
-Ciao %s,
+Ciao {name},
 benvenuto nel Telegram Payment Bot.
 Qui trovi la lista dei comandi supportati.
 
@@ -41,7 +41,7 @@ I parametri tra parentesi quadre sono opzionali.
 **NOTA:** è possibile aggiungere "quiet" o "q" come ultimo parametro per ottenere il risultato del comando in chat privata, per evitare di intasare il gruppo</sentence>
     <!-- Invite link command message (sent to authorized users) -->
     <sentence id="INVITE_LINK_AUTH_CMD">**LINK DI INVITO**
-Nuovo link di invito per il gruppo **"%s"**: %s
+Nuovo link di invito per il gruppo **"{chat_title}"**: {invite_link}
 Il vecchio link è stato revocato.
 Se avete un link di invito generato da voi, revocatelo e usate quello generato dal bot.</sentence>
     <!-- Invite link command message (sent to all users) -->
@@ -72,113 +72,121 @@ La modalità di test è attualmente disattivata.</sentence>
     <!-- Authorized users command message -->
     <sentence id="AUTH_USERS_CMD">**UTENTI AUTORIZZATI**
 Utenti autorizzati a utilizzare il bot:
-%s</sentence>
+{auth_users_list}</sentence>
     <!-- Chat information command message -->
     <sentence id="CHAT_INFO_CMD">**INFORMAZIONI CHAT**
-Nome: %s
-Tipo: %s
-ID: %d</sentence>
+Titolo: {chat_title}
+Tipo: {chat_type}
+ID: {chat_id}</sentence>
     <!-- Users list command message -->
     <sentence id="USERS_LIST_CMD">**LISTA UTENTI**
-Gruppo: **%s**
+Gruppo: **{chat_title}**
 Lista membri:
-%s</sentence>
+{users_list}</sentence>
 
-    <!-- Check username command message (part 1) -->
-    <sentence id="CHECK_NO_USERNAME_P1_CMD">**CONTROLLO USERNAME**
-Gruppo: **%s**
-Membri senza username: **%d**
+    <!-- Check username command message (notice) -->
+    <sentence id="CHECK_NO_USERNAME_NOTICE_CMD">**CONTROLLO USERNAME**
+Gruppo: **{chat_title}**
+Membri senza username: **{members_count}**
 Lista membri:
-%s
-Siete pregati di impostare lo username %s o verrete rimossi dal gruppo.
+{members_list}
+Siete pregati di impostare lo username {hours_left} o verrete rimossi dal gruppo.
 Per impostarlo: **Impostazioni -> Modifica profilo -> username**</sentence>
-    <!-- Check username command message (part 2) -->
-    <sentence id="CHECK_NO_USERNAME_P2_CMD">\n\n**Lo username deve essere inviato via email a %s** o in privato a @%s.</sentence>
-    <!-- Check username command message (part 3) -->
-    <sentence id="CHECK_NO_USERNAME_P3_CMD">\n\n**Lo username deve essere inviato via email a %s**.</sentence>
-    <!-- Check username command message (part 4) -->
-    <sentence id="CHECK_NO_USERNAME_P4_CMD">\n\n**Lo username deve essere inviato in privato a @%s**.</sentence>
-    <!-- Check username command message (part 5) -->
-    <sentence id="CHECK_NO_USERNAME_P5_CMD">**CONTROLLO USERNAME**
-Gruppo: **%s**
+    <!-- Check username command message (email/telegram) -->
+    <sentence id="CHECK_NO_USERNAME_EMAIL_TG_CMD">\n\n**Lo username deve essere inviato via email a {support_email} o in privato a @{support_telegram}**.</sentence>
+    <!-- Check username command message (only email) -->
+    <sentence id="CHECK_NO_USERNAME_ONLY_EMAIL_CMD">\n\n**Lo username deve essere inviato via email a {support_email}**.</sentence>
+    <!-- Check username command message (only telegram) -->
+    <sentence id="CHECK_NO_USERNAME_ONLY_TG_CMD">\n\n**Lo username deve essere inviato in privato a @{support_telegram}**.</sentence>
+    <!-- Check username command message (all ok) -->
+    <sentence id="CHECK_NO_USERNAME_ALL_OK_CMD">**CONTROLLO USERNAME**
+Gruppo: **{chat_title}**
 Tutti i membri hanno impostato lo username.</sentence>
 
-    <!-- Remove no username command message (part 1) -->
-    <sentence id="REMOVE_NO_USERNAME_P1_CMD">**CONTROLLO USERNAME**
-Gruppo: **%s**
+    <!-- Remove no username command message (notice) -->
+    <sentence id="REMOVE_NO_USERNAME_NOTICE_CMD">**CONTROLLO USERNAME**
+Gruppo: **{chat_title}**
 I membri senza username stanno per essere rimossi.</sentence>
-    <!-- Remove no username command message (part 2) -->
-    <sentence id="REMOVE_NO_USERNAME_P2_CMD">Operazione completata. Membri rimossi: **%d**</sentence>
-    <!-- Remove no username command message (part 3) -->
-    <sentence id="REMOVE_NO_USERNAME_P3_CMD">\nLista membri:
-%s</sentence>
+    <!-- Remove no username command message (completed) -->
+    <sentence id="REMOVE_NO_USERNAME_COMPLETED_CMD">Operazione completata. Membri rimossi: **{members_count}**</sentence>
+    <!-- Remove no username command message (list) -->
+    <sentence id="REMOVE_NO_USERNAME_LIST_CMD">\nLista membri:
+{members_list}</sentence>
 
-    <!-- Check username command message (part 1) -->
-    <sentence id="CHECK_PAYMENTS_DATA_P1_CMD">**CONTROLLO DATI PAGAMENTO**
+    <!-- Check username command message (notice) -->
+    <sentence id="CHECK_PAYMENTS_DATA_NOTICE_CMD">**CONTROLLO DATI PAGAMENTO**
 I dati di pagamento stanno per essere controllati.</sentence>
-    <!-- Check username command message (part 2) -->
-    <sentence id="CHECK_PAYMENTS_DATA_P2_CMD">Operazione completata. Errori trovati: **%d**</sentence>
-    <!-- Check username command message (part 3) -->
-    <sentence id="CHECK_PAYMENTS_DATA_P3_CMD">
-- Lo username @%s è presente più di una volta alla riga %d</sentence>
-    <!-- Check username command message (part 4) -->
-    <sentence id="CHECK_PAYMENTS_DATA_P4_CMD">
-- La data di scadenza per lo username @%s alla riga %d non è valida (%s)</sentence>
-    <!-- Check username command message (part 5) -->
-    <sentence id="CHECK_PAYMENTS_DATA_P5_CMD">I dati di pagamento sono corretti, nessun errore trovato.</sentence>
+    <!-- Check username command message (completed) -->
+    <sentence id="CHECK_PAYMENTS_DATA_COMPLETED_CMD">Operazione completata. Errori trovati: **{errors_count}**</sentence>
+    <!-- Check username command message (username error) -->
+    <sentence id="CHECK_PAYMENTS_DATA_USERNAME_ERR_CMD">
+- Lo username @{username} è presente più di una volta alla riga {row_index}</sentence>
+    <!-- Check username command message (expiration error) -->
+    <sentence id="CHECK_PAYMENTS_DATA_DATE_ERR_CMD">
+- La data di scadenza per lo username @{username} alla riga {row_index} non è valida ({expiration_date})</sentence>
+    <!-- Check username command message (all ok) -->
+    <sentence id="CHECK_PAYMENTS_DATA_ALL_OK_CMD">I dati di pagamento sono corretti, nessun errore trovato.</sentence>
 
     <!-- Email no payment command message (disabled) -->
     <sentence id="EMAIL_NO_PAYMENT_DISABLED_CMD">**CONTROLLO PAGAMENTI**
 Le email sono al momento disabilitate.</sentence>
-    <!-- Email no payment command message (part 1) -->
-    <sentence id="EMAIL_NO_PAYMENT_P1_CMD">**CONTROLLO PAGAMENTI**
-Membri il cui pagamento sta per cadere %s: **%d**
+    <!-- Email no payment command message (notice) -->
+    <sentence id="EMAIL_NO_PAYMENT_NOTICE_CMD">**CONTROLLO PAGAMENTI**
+Gruppo: **{chat_title}**
+I membri il cui pagamento sta per scadere stanno per essere avvisati via email.</sentence>
+    <!-- Email no payment command message (completed) -->
+    <sentence id="EMAIL_NO_PAYMENT_COMPLETED_CMD">**CONTROLLO PAGAMENTI**
+Membri il cui pagamento sta per cadere {days_left}: **{members_count}**
 Lista membri:
-%s
+{members_list}
 Una email è stata inviata a tutti i membri.</sentence>
-    <!-- Email no payment command message (part 2) -->
-    <sentence id="EMAIL_NO_PAYMENT_P2_CMD">**CONTROLLO PAGAMENTI**
+    <!-- Email no payment command message (all ok) -->
+    <sentence id="EMAIL_NO_PAYMENT_ALL_OK_CMD">**CONTROLLO PAGAMENTI**
 Tutti i membri hanno pagato, nessuna email inviata.</sentence>
 
-    <!-- Check no payment command message (part 1) -->
-    <sentence id="CHECK_NO_PAYMENT_P1_CMD">**CONTROLLO PAGAMENTI**
-Gruppo: **%s**
-Membri il cui pagamento sta per cadere %s: **%d**
+    <!-- Check no payment command message (notice) -->
+    <sentence id="CHECK_NO_PAYMENT_NOTICE_CMD">**CONTROLLO PAGAMENTI**
+Gruppo: **{chat_title}**
+I membri il cui pagamento sta per scadere stanno per essere controllati.</sentence>
+    <!-- Check no payment command message (completed) -->
+    <sentence id="CHECK_NO_PAYMENT_COMPLETED_CMD">**CONTROLLO PAGAMENTI**
+Gruppo: **{chat_title}**
+Membri il cui pagamento sta per cadere {days_left}: **{members_count}**
 Lista membri:
-%s
-Siete pregati di pagare entro %s o verrete rimossi dal gruppo.</sentence>
-    <!-- Check no payment command message (part 2) -->
-    <sentence id="CHECK_NO_PAYMENT_P2_CMD">\n\nPotete pagare direttamente dal sito: %s</sentence>
-    <!-- Check no payment command message (part 3) -->
-    <sentence id="CHECK_NO_PAYMENT_P3_CMD">\n\nSe siete nella lista ma avete pagato, inviate una email a %s o contattate @%s **specificando il vostro username Telegram**.</sentence>
-    <!-- Check no payment command message (part 4) -->
-    <sentence id="CHECK_NO_PAYMENT_P4_CMD">\n\nSe siete nella lista ma avete pagato, inviate una email a %s **specificando il vostro username Telegram**.</sentence>
-    <!-- Check no payment command message (part 5) -->
-    <sentence id="CHECK_NO_PAYMENT_P5_CMD">\n\nSe siete nella lista ma avete pagato, contattate @%s **specificando il vostro username Telegram**.</sentence>
-    <!-- Check no payment command message (part 6) -->
-    <sentence id="CHECK_NO_PAYMENT_P6_CMD">**CONTROLLO PAGAMENTI**
-Gruppo: **%s**
+{members_list}
+Siete pregati di pagare entro {last_day} o verrete rimossi dal gruppo.</sentence>
+    <!-- Check no payment command message (website) -->
+    <sentence id="CHECK_NO_PAYMENT_WEBSITE_CMD">\n\nPotete pagare direttamente dal sito: {website}</sentence>
+    <!-- Check no payment command message (email/telegram) -->
+    <sentence id="CHECK_NO_PAYMENT_EMAIL_TG_CMD">\n\nSe siete nella lista ma avete pagato, inviate una email a {support_email} o contattate @{support_telegram} **specificando il vostro username Telegram**.</sentence>
+    <!-- Check no payment command message (only email) -->
+    <sentence id="CHECK_NO_PAYMENT_ONLY_EMAIL_CMD">\n\nSe siete nella lista ma avete pagato, inviate una email a {support_email} **specificando il vostro username Telegram**.</sentence>
+    <!-- Check no payment command message (only telegram) -->
+    <sentence id="CHECK_NO_PAYMENT_ONLY_TG_CMD">\n\nSe siete nella lista ma avete pagato, contattate @{support_telegram} **specificando il vostro username Telegram**.</sentence>
+    <!-- Check no payment command message (all ok) -->
+    <sentence id="CHECK_NO_PAYMENT_ALL_OK_CMD">**CONTROLLO PAGAMENTI**
+Gruppo: **{chat_title}**
 Tutti i membri hanno rinnovato il pagamento.</sentence>
 
-    <!-- Remove no payment command message (part 1) -->
-    <sentence id="REMOVE_NO_PAYMENT_P1_CMD">**CONTROLLO PAGAMENTI**
-Gruppo: **%s**
+    <!-- Remove no payment command message (notice) -->
+    <sentence id="REMOVE_NO_PAYMENT_NOTICE_CMD">**CONTROLLO PAGAMENTI**
+Gruppo: **{chat_title}**
 I membri il cui pagamento sta per scadere stanno per essere rimossi.</sentence>
-    <!-- Remove no payment command message (part 2) -->
-    <sentence id="REMOVE_NO_PAYMENT_P2_CMD">Operazione completata. Membri rimossi: **%d**</sentence>
-    <!-- Remove no payment command message (part 3) -->
-    <sentence id="REMOVE_NO_PAYMENT_P3_CMD">\nLista membri:
-%s</sentence>
+    <!-- Remove no payment command message (completed) -->
+    <sentence id="REMOVE_NO_PAYMENT_COMPLETED_CMD">Operazione completata. Membri rimossi: **{members_count}**</sentence>
+    <!-- Remove no payment command message (all ok) -->
+    <sentence id="REMOVE_NO_PAYMENT_ALL_OK_CMD">\nLista membri:
+{members_list}</sentence>
 
     <!-- Misc -->
-    <sentence id="WITHIN_HOURS_MSG">entro %d ore</sentence>
-    <sentence id="WITHIN_DAYS_MSG">entro %d giorni</sentence>
+    <sentence id="WITHIN_HOURS_MSG">entro {hours} ore</sentence>
+    <sentence id="WITHIN_DAYS_MSG">entro {days} giorni</sentence>
     <sentence id="ASAP_MSG">il prima possibile</sentence>
-    <sentence id="IN_DAYS_MSG">in %d giorni</sentence>
+    <sentence id="IN_DAYS_MSG">in {days} giorni</sentence>
     <sentence id="TODAY_MSG">oggi</sentence>
     <sentence id="TOMORROW_MSG">domani</sentence>
-    <sentence id="DAY_OF_MONTH_MSG">il %d del mese</sentence>
+    <sentence id="DAY_OF_MONTH_MSG">il giorno {day_of_month} del mese</sentence>
     <sentence id="FEW_DAYS_MSG">pochi giorni</sentence>
-    <sentence id="JOINED_MEMBER_KICKED_FOR_PAYMENT_MSG">Nuovo membro %s rimosso (si è unito al gruppo senza pagamento)</sentence>
-    <sentence id="JOINED_MEMBER_KICKED_FOR_USERNAME_MSG">Nuovo membro %s rimosso (si è unito al gruppo senza username)</sentence>
+    <sentence id="JOINED_MEMBER_KICKED_FOR_PAYMENT_MSG">Nuovo membro {name} rimosso (si è unito al gruppo senza pagamento)</sentence>
+    <sentence id="JOINED_MEMBER_KICKED_FOR_USERNAME_MSG">Nuovo membro {name} rimosso (si è unito al gruppo senza username)</sentence>
 </translation>
